volodymyr/2/inet_gw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vnet_nebo.id
  tags = {
    Name = "vnet-nebo-igw"
  }
}

resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.vnet_nebo.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    Name = "public-route-table"
  }
}

resource "aws_route_table_association" "public_route_assoc" {
  subnet_id      = aws_subnet.snet_public.id
  route_table_id = aws_route_table.public_route_table.id
}
